# OFMon

./: .gitignore  Cargo.toml  IncludedRootsPEMTxt.txt  README.md  partitions_singleapp.csv  sdkconfig.defaults  sem1  sem101  sem102  sizes.txt
.cargo/: config.toml
src/: bindings.h  ct.rs  main.rs  ota.rs  utils.rs
